# ship_fy_fastapi

./: pyproject.toml  shipments.db  shipments.json
ship_fy_fastapi/: database.py  main.py  schemas.py
ship_fy_fastapi/database/: models.py  session.py
